create leaderboard skeleton

--- a/index.html
+++ b/index.html
@@ -21,6 +21,25 @@
                 This is a placeholder for our blurb
             </p>
         </section>
+        <section class="leaderboard-container">
+            <h2 class="text-center">Leaderboard</h2>
+            <div id="leaderboard" class="text-center">
+                <div class="leaderboard-card">
+                    <h3 class="dorm-name">Dorm 1</h3>
+                    <p class="energy consumption">Energy Consumption 1</p>
+                </div>
+                <div class="leaderboard-card">
+                    <h3 class="dorm-name">Dorm 2</h3>
+                    <p class="energy consumption">Energy Consumption 2</p>
+                </div>
+                <div class="leaderboard-card">
+                    <h3 class="dorm-name">Dorm 3</h3>
+                    <p class="energy consumption">Energy Consumption 3</p>
+                </div>
+            </div>
+        </section>
     </main>
+    <!-- <script src="leaderboard-script.js"></script> -->
+-->
 </body>
 </html>
