sample display of data

--- a/index.html
+++ b/index.html
@@ -2,22 +2,70 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.7.0/d3.min.js"></script>
 <canvas id="chart"></canvas>
 <script>
-d3.csv('firstyearhousing_monthy.csv').then(makeChart);
-console.log(d3.csv('firstyearhousing_monthy.csv'));
-function makeChart(players) {
-  var playerLabels = players.map(function(d) {return d.Name});
-  var weeksData = players.map(function(d) {return d.Weeks});
+d3.csv('https://raw.githubusercontent.com/KhanradCoder/hoya-hacks/main/firstyearhousing_monthy.csv').then(function(data) {
+  var house_name = 'TUTTLE-DUNNINGTON';
+  var houseData = data.filter(function(d) { return d.House === house_name; });
 
-  var chart = new Chart('chart', {
-    type: 'horizontalBar',
+  var months = ['Jan 2023', 'Feb 2023', 'Mar 2023', 'Apr 2023', 'May 2023', 'Jun 2023', 'Jul 2023', 'Aug 2023', 'Sep 2023', 'Oct 2023', 'Nov 2023', 'Dec 2023'];
+  var electricity = months.map(function(month) { return parseFloat(houseData[0][month].replace(/,/g, '')); });
+  var hotWater = months.map(function(month) { return parseFloat(houseData[1][month].replace(/,/g, '')); });
+  var water = months.map(function(month) { return parseFloat(houseData[2][month].replace(/,/g, '')); });
+  
+  var z_params = ['Mean', 'Standard Deviation']
+  var z_electric = z_params.map(function(param) { return parseFloat(houseData[0][param].replace(/,/g, '')); });
+  var z_hotWater = z_params.map(function(param) { return parseFloat(houseData[1][param].replace(/,/g, '')); });
+  var z_water = z_params.map(function(param) { return parseFloat(houseData[2][param].replace(/,/g, '')); });
+
+  var z_score_electric = electricity.map(function(value) {return (value - z_electric[0]) / z_electric[1];});
+  var z_score_hotWater = hotWater.map(function(value) {return (value - z_hotWater[0]) / z_hotWater[1];});
+  var z_score_water = water.map(function(value) {return (value - z_water[0]) / z_water[1];});
+
+  console.log(z_score_hotWater);
+  var ctx = document.getElementById('chart').getContext('2d');
+  var myChart = new Chart(ctx, {
+    type: 'bar',
     data: {
-      labels: playerLabels,
-      datasets: [
-        {
-          data: weeksData
-        }
-      ]
+      labels: months,
+      datasets: [{
+        label: 'Electricity',
+        data: z_score_electric,
+        backgroundColor: 'rgba(75, 192, 192, 0.2)',
+        borderColor: 'rgba(75, 192, 192, 1)',
+        borderWidth: 1
+      },
+      {
+        label: 'Hot Water',
+        data: z_score_hotWater,
+        backgroundColor: 'rgba(75, 192, 192, 0.2)',
+        borderColor: 'rgba(75, 192, 192, 1)',
+        borderWidth: 1
+      },
+      {
+        label: 'Water',
+        data: z_score_water,
+        backgroundColor: 'rgba(75, 192, 192, 0.2)',
+        borderColor: 'rgba(75, 192, 192, 1)',
+        borderWidth: 1
+      }]
+    },
+    options: {
+      title: {
+        display: true,
+        text: house_name+' HOUSE ENVIRONMENTAL IMPACT',
+      },
+      scales: {
+        xAxes: [{
+          stacked: true
+        }],
+        yAxes: [{
+          stacked: true,
+          ticks: {
+            min: -3,
+            suggestedMax: 3
+          }
+        }]
+      }
     }
   });
-}
+});
 </script>
