--- a/index.html
+++ b/index.html
@@ -5,50 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tab Title</title>
     <link rel="stylesheet" href="css/index.css">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <nav>
+    <nav class="text-center">
         <ul>
             <li>Home</li>
             <li>Leaderboard</li>
+            <li><img src="images/small-nav-pic.png" class="nav-image"></li>
             <li>Dorms</li>
             <li>About</li>
         </ul>
     </nav>
+
     <main>
         <section class="blurb-container">
-            <h1 class="text-center">This is a placeholder header</h1>
+            <h1 class="text-center">Green Rivalry: The UVA Dorm Energy Challenge</h1>
             <p class="text-center">
-                This is a placeholder for our blurb
+                Join the ultimate showdown of sustainability! Compete with your dorm mates to slash energy consumption and <b>win $20,000 for your dorm!</b> Track your progress, climb the leaderboard, and turn conservation into victory – all while securing a greener future for our campus.
             </p>
-            <section class="leaderboard-container">
-                <!-- Leaderboard Title -->
-                <h2 class="text-center">Top 3 Dorms with Least Energy Consumption per Capita</h2>
-                
-                <!-- Cards Container -->
-                <div class="leaderboard-cards-container">
-                    <!-- Card 1 -->
-                    <div class="leaderboard-card">
-                        <h3 class="dorm-name">Dorm 1</h3>
-                        <p class="energy-consumption">100 kWh/person</p>
-                    </div>
-
-                    <!-- Card 2 -->
-                    <div class="leaderboard-card">
-                        <h3 class="dorm-name">Dorm 2</h3>
-                        <p class="energy-consumption">90 kWh/person</p>
-                    </div>
-
-                    <!-- Card 3 -->
-                    <div class="leaderboard-card">
-                        <h3 class="dorm-name">Dorm 3</h3>
-                        <p class="energy-consumption">85 kWh/person</p>
-                    </div>
-                </div>
-            </section>
-
+        </section>
+        
+        <section class="leaderboard">
+            <h2 class="text-center">Leaderboard</h2>
+            <ul class="leaderboard-list">
+                <li id="entry-1" class="leaderboard-list-entry">1. Dorm in first place</li>
+                <li id="entry-2" class="leaderboard-list-entry">2. Dorm in second place</li>
+                <li id="entry-3" class="leaderboard-list-entry">3</li>
+            </ul>
         </section>
     </main>
     <!-- <script src="leaderboard-script.js"></script> -->
 </body>
+<script src="js/leaderboard.js"></script>
 </html>
