add navbar hover animations

--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
             </p>
         </section>
 
-        <h2 class="text-center" style="font-size: 30px; padding-top: 75px">The Top Three</h2>
+        <div class="rotating-globe">
+            <img src="images/rotating-globe.svg">
+        </div>
+
+        <h2 class="text-center" style="font-size: 40px; padding-top: 75px">The Top Three</h2>
         <section class="leaderboard">
             <ul class="leaderboard-list">
                 <li class="leaderboard-list-entry">
