create leaderboard.html and script for populating board

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <img src="images/rotating-globe.svg">
         </div>
 
-        <h2 class="text-center" style="font-size: 40px; padding-top: 75px">The Top Three</h2>
+        <!-- <h2 class="text-center" style="font-size: 40px; padding-top: 75px">The Top 3</h2>
         <section class="leaderboard">
             <ul class="leaderboard-list">
                 <li class="leaderboard-list-entry">
@@ -46,7 +46,7 @@
                     <span class="rank-name">3 &nbsp;McCormick Dorm</span>
                     <span class="score">500</span>
                 </li>
-            </ul>
+            </ul> -->
         </section>
     </main>
     <!-- <script src="leaderboard-script.js"></script> -->
