increase home page heading size

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <main>
         <section class="blurb-container">
-            <h1 class="text-center" style="font-size: 30px; padding-top: 20px;">Green Rivalry: The UVA Dorm Energy Challenge</h1>
+            <h1 class="text-center" style="font-size: 35px; padding-top: 20px;">Green Rivalry: The UVA Dorm Energy Challenge</h1>
             <p class="text-center" style="font-size: 25px;">
                 Join the ultimate showdown of sustainability! Compete with your dorm mates to slash energy consumption and <b>win $20,000 for your dorm!</b> Track your progress, climb the leaderboard, and turn conservation into victory – all while securing a greener future for our campus.
             </p>
@@ -47,6 +47,10 @@
                     <span class="score">500</span>
                 </li>
             </ul> -->
+        </section>
+
+        <section class="energy-usage-charts">
+            <!-- TODO: write script to add graphs -->
         </section>
     </main>
     <!-- <script src="leaderboard-script.js"></script> -->
