convert leaderboard to table

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
                     <span class="rank-name">3 &nbsp;McCormick Dorm</span>
                     <span class="score">500</span>
                 </li>
-            </ul> -->
-        </section>
+            </ul>
+        </section> -->
 
         <section class="energy-usage-charts">
             <!-- TODO: write script to add graphs -->
