--- a/leaderboard.html
+++ b/leaderboard.html
@@ -20,7 +20,8 @@
 
     <h1 id="leaderboard-heading" class="text-center">Leaderboard</h1>
     <section class="leaderboard">
-            <ol id="leaderboard-list"></ol>
+        <table class="leaderboard-table">
+        </table>
     </section>
     <script src="js/leaderboard.js"></script>
 </body>
