--- a/dorms.html
+++ b/dorms.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/leaderboard.css">
     <title>Document</title>
-    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/dorms.css">
 </head>
 <body>
     <nav class="text-center">
@@ -17,14 +16,5 @@
             <li><a href="about.html">About</a></li>
         </ul>
     </nav>
-    
-    <main>
-        <h1 id="leaderboard-heading" class="text-center">Leaderboard</h1>
-        <section class="leaderboard">
-            <table class="leaderboard-table">
-            </table>
-        </section>
-        <script src="js/leaderboard.js"></script>
-    </main>
 </body>
 </html>
