--- a/about.html
+++ b/about.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/dorms.css">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <main>
-        
-    </main>
+    <nav class="text-center">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="leaderboard.html">Leaderboard</a></li>
+            <li><img src="images/small-nav-pic.png" class="nav-image"></li>
+            <li><a href="dorms.html">Dorms</a></li>
+            <li><a href="about.html">About</a></li>
+        </ul>
+    </nav>
 </body>
 </html>
