--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/dorms.css">
+    <link rel="stylesheet" href="css/about.css">
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -17,5 +17,23 @@
             <li><a href="about.html">About</a></li>
         </ul>
     </nav>
+
+    <main>
+        <h1 class="heading">About This Website</h1>
+        <h2 class="subheading">Our Mission</h2>
+        <p class="subtext">At the University of Virginia, we are on a mission to create a sustainable and eco-friendly campus environment. We believe that every small step towards energy conservation can make a significant impact on our planet's future. That's why we've introduced the "Green Rivalry: The Dorm Energy Challenge."</p>
+        <h2 class="subheading">What We Do</h2>
+        <ul>
+            <li><strong>Promoting Sustainability:</strong> We organize and manage an exciting competition among dorms to reduce their energy consumption. This competition encourages students to embrace sustainable living practices and make a positive change in our community.<br><br></li>
+            <li><strong>Tracking Progress:</strong> Our state-of-the-art monitoring systems track the energy usage of participating dorms in real-time. This data helps us create leaderboards and graphs that showcase the efforts of our dorm residents.<br><br></li>
+            <li><strong>Rewarding Excellence:</strong> To incentivize sustainability, we offer substantial rewards for the dorm that excels in the competition. The winning dorm receives a generous prize of $20,000, along with the satisfaction of leading the way towards a greener future.</li>
+        </ul>
+        <h2 class="subheading">Why Sustainability Matters</h2>
+        <p class="subtext">We firmly believe that sustainability is not just a buzzword; it's a responsibility. By reducing energy consumption, we contribute to a cleaner environment, lower energy costs, and a healthier planet for future generations. Sustainability is at the core of our values, and we are committed to spreading awareness and action among the UVA's community.</p>
+        <h2 class="subheading">Join Us!</h2>
+        <p class="subtext">Are you passionate about sustainability? Do you want to make a difference on campus and beyond? Join us in the "Green Rivalry: The Dorm Energy Challenge." Whether you're a dorm resident looking to compete or a volunteer interested in supporting our mission, there's a place for you on our team.</p>
+        <h2 class="subheading">Contact Us</h2>
+        <p class="subtext">If you have any questions, suggestions, or would like to get involved, please don't hesitate to contact us. We'd love to hear from you!</p>
+    </main>
 </body>
 </html>
