finish About page

--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
     </nav>
 
     <main>
-        <h1 class="heading">About This Website</h1>
+        <h1 class="heading">About Us</h1>
         <h2 class="subheading">Our Mission</h2>
         <p class="subtext">At the University of Virginia, we are on a mission to create a sustainable and eco-friendly campus environment. We believe that every small step towards energy conservation can make a significant impact on our planet's future. That's why we've introduced the "Green Rivalry: The Dorm Energy Challenge."</p>
         <h2 class="subheading">What We Do</h2>
