--- a/leaderboard.html
+++ b/leaderboard.html
@@ -1,7 +1,9 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.7.0/d3.min.js"></script>
 <script>
 //Get Rankings
-d3.csv('https://raw.githubusercontent.com/KhanradCoder/hoya-hacks/main/firstyearhousing_monthy1.csv').then(function(data) {
+d3.csv('https://raw.githubusercontent.com/KhanradCoder/hoya-hacks/main/firstyearhousing_monthy.csv').then(function(data) {
+  const columnNames = data.columns
+  const months = columnNames.slice(2, columnNames.length);
   var totalScores = {};
   var electricScores = {};
   var chilledWaterScores = {}; 
