extract Adam's scripts to js files

--- a/index.html
+++ b/index.html
@@ -1,59 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tab Title</title>
-    <link rel="stylesheet" href="css/index.css">
-    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;500;700&display=swap" rel="stylesheet">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Tab Title</title>
+        <link rel="stylesheet" href="css/index.css">
+        <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;500;700&display=swap" rel="stylesheet">
+    </head>
 
-<body>
-    <nav class="text-center">
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="leaderboard.html">Leaderboard</a></li>
-            <li><img src="images/small-nav-pic.png" class="nav-image"></li>
-            <li><a href="dorms.html">Dorms</a></li>
-            <li><a href="about.html">About</a></li>
-        </ul>
-    </nav>
-
-    <main>
-        <section class="blurb-container">
-            <h1 class="text-center" style="font-size: 35px; padding-top: 20px;">Green Rivalry: The UVA Dorm Energy Challenge</h1>
-            <p class="text-center" style="font-size: 25px;">
-                Join the ultimate showdown of sustainability! Compete with your dorm mates to slash energy consumption and <b>win $20,000 for your dorm!</b> Track your progress, climb the leaderboard, and turn conservation into victory – all while securing a greener future for our campus.
-            </p>
-        </section>
-
-        <div class="rotating-globe">
-            <img src="images/rotating-globe.svg">
-        </div>
-
-        <!-- <h2 class="text-center" style="font-size: 40px; padding-top: 75px">The Top 3</h2>
-        <section class="leaderboard">
-            <ul class="leaderboard-list">
-                <li class="leaderboard-list-entry">
-                    <span class="rank-name">1 &nbsp;Gibbons Dorm</span>
-                    <span class="score">1500</span>
-                </li>
-                <li class="leaderboard-list-entry">
-                    <span class="rank-name">2 &nbsp;Lyle-Maupin Dorm</span>
-                    <span class="score">1000</span>
-                </li>
-                <li class="leaderboard-list-entry">
-                    <span class="rank-name">3 &nbsp;McCormick Dorm</span>
-                    <span class="score">500</span>
-                </li>
+    <body>
+        <nav class="text-center">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="leaderboard.html">Leaderboard</a></li>
+                <li><img src="images/small-nav-pic.png" class="nav-image"></li>
+                <li><a href="dorms.html">Dorms</a></li>
+                <li><a href="about.html">About</a></li>
             </ul>
-        </section> -->
+        </nav>
 
-        <section class="energy-usage-charts">
-            <!-- TODO: write script to add graphs -->
-        </section>
-    </main>
-    <!-- <script src="leaderboard-script.js"></script> -->
-</body>
-<script src="js/mini-leaderboard.js"></script>
+        <main>
+            <section class="blurb-container">
+                <h1 class="text-center" style="font-size: 35px; padding-top: 20px;">Green Rivalry: The UVA Dorm Energy Challenge</h1>
+                <p class="text-center" style="font-size: 25px;">
+                    Join the ultimate showdown of sustainability! Compete with your dorm mates to slash energy consumption and <b>win $20,000 for your dorm!</b> Track your progress, climb the leaderboard, and turn conservation into victory – all while securing a greener future for our campus.
+                </p>
+            </section>
+
+            <div class="rotating-globe">
+                <img src="images/rotating-globe.svg">
+            </div>
+
+            <!-- <h2 class="text-center" style="font-size: 40px; padding-top: 75px">The Top 3</h2>
+            <section class="leaderboard">
+                <ul class="leaderboard-list">
+                    <li class="leaderboard-list-entry">
+                        <span class="rank-name">1 &nbsp;Gibbons Dorm</span>
+                        <span class="score">1500</span>
+                    </li>
+                    <li class="leaderboard-list-entry">
+                        <span class="rank-name">2 &nbsp;Lyle-Maupin Dorm</span>
+                        <span class="score">1000</span>
+                    </li>
+                    <li class="leaderboard-list-entry">
+                        <span class="rank-name">3 &nbsp;McCormick Dorm</span>
+                        <span class="score">500</span>
+                    </li>
+                </ul>
+            </section> -->
+
+            <section class="energy-usage-charts">
+                <!-- TODO: write script to add graphs -->
+            </section>
+        </main>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.7.0/d3.min.js"></script>
+        <canvas id="chart"></canvas>
+        <script src="js/index.js"></script>
+    </body>
 </html>
