--- a/leaderboard.html
+++ b/leaderboard.html
@@ -24,6 +24,7 @@
             <table class="leaderboard-table">
             </table>
         </section>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.7.0/d3.min.js"></script>
         <script src="js/leaderboard.js"></script>
     </main>
 </body>
