--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tab Title</title>
     <link rel="stylesheet" href="css/index.css">
-    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@600;800&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <nav class="text-center">
+    <nav class="navbar">
         <ul>
+            <li><img src="images/logo.png" class="nav-image" style="width: 100px"></li>
             <li><a href="index.html">Home</a></li>
             <li><a href="leaderboard.html">Leaderboard</a></li>
-            <li><img src="images/small-nav-pic.png" class="nav-image"></li>
             <li><a href="dorms.html">Dorms</a></li>
             <li><a href="about.html">About</a></li>
         </ul>
@@ -21,8 +23,8 @@
 
     <main>
         <section class="blurb-container">
-            <h1 class="text-center" style="font-size: 35px; padding-top: 20px;">Green Rivalry: The UVA Dorm Energy Challenge</h1>
-            <p class="text-center" style="font-size: 25px;">
+            <h1 class="text-center" style="font-size: 35px; padding-top: 20px; font-weight: 900;">Green Rivalry: The UVA Dorm Energy Challenge</h1>
+            <p class="text-center" style="font-size: 25px; font-weight: 100;">
                 Join the ultimate showdown of sustainability! Compete with your dorm mates to slash energy consumption and <b>win $20,000 for your dorm!</b> Track your progress, climb the leaderboard, and turn conservation into victory – all while securing a greener future for our campus.
             </p>
         </section>
