--- a/leaderboard.html
+++ b/leaderboard.html
@@ -5,14 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/leaderboard.css">
     <title>Document</title>
-    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@600;800&display=swap" rel="stylesheet">
 </head>
 <body>
-    <nav class="text-center">
+    <nav class="navbar">
         <ul>
+            <li><img src="images/logo.png" class="nav-image" style="width: 100px"></li>
             <li><a href="index.html">Home</a></li>
             <li><a href="leaderboard.html">Leaderboard</a></li>
-            <li><img src="images/small-nav-pic.png" class="nav-image"></li>
             <li><a href="dorms.html">Dorms</a></li>
             <li><a href="about.html">About</a></li>
         </ul>
