--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <img src="images/rotating-globe.svg">
         </div>
 
-        <!-- <h2 class="text-center" style="font-size: 40px; padding-top: 75px">The Top 3</h2>
+        <h2 class="text-center" style="font-size: 40px; padding-top: 75px">The Top 3</h2>
         <section class="leaderboard">
             <ul class="leaderboard-list">
                 <li class="leaderboard-list-entry">
